--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["https://*.glassdoor.com/*"],
+            "matches": ["https://*.glassdoor.com/*", "https://www.teamblind.com/*"],
             "js": ["removeBlockers.js"]
         }
     ]
