--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Clear Glass",
     "description": "Remove obstructions from Glassdoor",
-    "version": "1.0",
+    "version": "1.1.0",
     "action": {
         "default_popup": "splash.html",
         "default_icon": "icon16.png"
@@ -15,7 +15,11 @@
     },
     "content_scripts": [
         {
-            "matches": ["https://*.glassdoor.com/*", "https://www.teamblind.com/*"],
+            "matches": [
+                "https://*.glassdoor.com/*",
+                "https://*.teamblind.com/*",
+                "https://*.repvue.com/*"
+            ],
             "js": ["removeBlockers.js"]
         }
     ]
