increased the speed at which unblocking action occurs, improving functionality particularly for Glassdoor.

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
                 "https://*.teamblind.com/*",
                 "https://*.repvue.com/*"
             ],
-            "js": ["removeBlockers.js"]
+            "js": ["removeBlockers.js"],
+            "run_at": "document_start"
         }
     ]
 }
