condensed logic to single script, updated tsconfig and manifest, and enhanced teamblind blocker removal coverage

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
                 "https://*.teamblind.com/*",
                 "https://*.repvue.com/*"
             ],
-            "js": ["main.js"],
+            "js": ["dist/removeBlockers.js"],
             "run_at": "document_start"
         }
     ]
