added initial display for amount of blocked elements over extension icon, increased extension icon fidelity

--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,16 @@
     "version": "1.2.0",
     "action": {
         "default_popup": "splash.html",
-        "default_icon": "icon16.png"
+        "default_icon": "icon128.png"
     },
     "icons": {
         "16": "icon16.png",
         "32": "icon32.png",
         "48": "icon48.png",
         "128": "icon128.png"
+    },
+    "background": {
+        "service_worker": "dist/background.js"
     },
     "content_scripts": [
         {
