--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/chrome": "^0.0.267",
         "prettier": "^3.2.5",
         "typescript": "^5.4.5"
     }
